tests/baselines/reference/genericsWithoutTypeParameters1.errors.txt
tests/cases/compiler/genericsWithoutTypeParameters1.ts(9,9): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/genericsWithoutTypeParameters1.ts(10,9): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/genericsWithoutTypeParameters1.ts(11,11): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/genericsWithoutTypeParameters1.ts(12,11): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/genericsWithoutTypeParameters1.ts(14,17): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/genericsWithoutTypeParameters1.ts(14,23): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/genericsWithoutTypeParameters1.ts(15,20): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/genericsWithoutTypeParameters1.ts(15,29): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/genericsWithoutTypeParameters1.ts(17,13): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/genericsWithoutTypeParameters1.ts(18,14): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/genericsWithoutTypeParameters1.ts(21,8): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/genericsWithoutTypeParameters1.ts(22,8): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/genericsWithoutTypeParameters1.ts(26,8): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/genericsWithoutTypeParameters1.ts(27,8): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
tests/cases/compiler/genericsWithoutTypeParameters1.ts(31,22): error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.


==== tests/cases/compiler/genericsWithoutTypeParameters1.ts (15 errors) ====
    class C<T> {
        foo(): T { return null }
    }
    
    interface I<T> {
        bar(): T;
    }
    
    var c1: C;
            ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
    var i1: I;
            ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
    var c2: C<I>;
              ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
    var i2: I<C>;
              ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
    
    function foo(x: C, y: I) { }
                    ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
                          ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
    function foo2(x: C<I>, y: I<C>) { }
                       ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
                                ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
    
    var x: { a: C } = { a: new C<number>() };
                ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
    var x2: { a: I } = { a: { bar() { return 1 } } };
                 ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
    
    class D<T> {
        x: C;
           ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
        y: D;
           ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
    }
    
    interface J<T> {
        x: I;
           ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
        y: J;
           ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
    }
    
    class A<T> { }
    function f<T>(x: T): A {
                         ~
!!! error TS2707: Type parameter 'T' implicitly has type 'any' because it was not supplied.
        return null;
    }